<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
	android:background="#FFFFFF">
  	
  	<LinearLayout
  	    android:id="@+id/topFrame"
  	    android:layout_width="match_parent"
  	    android:layout_height="wrap_content"
  	    android:gravity="center"
  	    android:orientation="vertical"
  	    android:paddingRight="@dimen/standardPadding"
  	    android:paddingTop="@dimen/standardPadding" >
    	<LinearLayout
	  	    android:id="@+id/uploadResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="wrap_content"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	  	<Button
	  	    android:id="@+id/mapButton"
	        android:layout_width="wrap_content"
	        android:layout_height="40sp"
	        android:text="...searching..."
	        android:layout_margin="@dimen/standardPadding"
	        android:textColor="#000000"
	        android:background="@drawable/bluebutton"
	        android:padding="1sp"
	        android:drawableLeft="@drawable/location_icon"/>
	  	  
	    <ToggleButton
	        android:id="@+id/indoorOutdoorToggle"
	        android:layout_width="wrap_content"
	        android:layout_height="40sp"
	        android:textOff="@string/Indoor"
	        android:textOn="@string/Outdoor" 
	        android:layout_margin="@dimen/standardPadding"
	        android:textColor="#000000"
	        android:padding="1sp"
	        android:background="@drawable/bluebutton"
	        android:drawableLeft="@drawable/indoortoggle"
	        android:drawableRight="@drawable/outdoortoggle"/>
	    
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/topText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="@dimen/standardPadding"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#000000"
	        android:visibility="invisible" />

	     <ProgressBar 
            android:layout_height="wrap_content" 
            android:indeterminate="false" 
            style="?android:attr/progressBarStyleHorizontal" 
            android:layout_width="fill_parent" 
            android:progressDrawable="@drawable/blueprogress" 
            android:maxHeight="20dip" 
            android:minHeight="20dip" 
            android:id="@+id/ProgressBar"
            android:visibility="invisible"
            android:gravity="center"
            />
	     
	    </LinearLayout>
    
  	<LinearLayout
  	    android:id="@+id/testResults"
  	    android:layout_width="match_parent"
  	    android:layout_height="0dp"
  	    android:layout_weight="1"
  	    android:background="@drawable/datahawk1a"
  	    android:gravity="top"
  	    android:inAnimation="@anim/slidein"
  	    android:orientation="vertical"
  	    android:outAnimation="@anim/slideout"
  	    android:paddingBottom="@dimen/standardPadding"
  	    android:paddingTop="@dimen/standardPadding" >
	     
	  	 <LinearLayout
	  	    android:id="@+id/uploadResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/uploadIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/upload_big" />	
	            <TextView
	                android:id="@+id/uploadLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/uploadLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"
	                android:textColor="#000000" />
	
	            <TextView
	                android:id="@+id/uploadSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="start"
	                android:layout_weight="0.39"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="#000000"
	                android:textSize="@dimen/numResultsSize"/>
	
	            <TextView
	                android:id="@+id/uploadUnits"
	                android:layout_width="50sp"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="bottom"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:paddingLeft="@dimen/standardPadding"
	                android:text="@string/kilobytespersecond"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="#000000"/>
	
	        </LinearLayout>
	  	
	  	  <LinearLayout
	  	    android:id="@+id/downloadResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/downloadIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/download_big" />
	
	            <TextView
	                android:id="@+id/downloadLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/downloadLabel"
	                android:textColor="#000000"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"/>
	
	            <TextView
	                android:id="@+id/downloadSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:layout_weight="0.49"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="#000000"
	                android:textSize="@dimen/numResultsSize"/>
	
	            <TextView
	                android:id="@+id/downloadUnits"
	                android:layout_width="50sp"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="bottom"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:paddingLeft="@dimen/standardPadding"
	                android:text="@string/kilobytespersecond"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="#000000"/>
	
	        </LinearLayout>
	  	 
	  	  <LinearLayout
	  	    android:id="@+id/latencyResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/latencyIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/latency_big" />
	
	            <TextView
	                android:id="@+id/latencyLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/latencyLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textSize="@dimen/resultsLabelSize"
	                android:textColor="#000000"/>
	
	            <TextView
	                android:id="@+id/latencySpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="start"
	                android:layout_weight="0.87"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/defaultValue"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="#000000"
	                android:textSize="@dimen/numResultsSize"/>
	
	            <TextView
	                android:id="@+id/latencyUnits"
	                android:layout_width="50sp"
	                android:textColor="#000000"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="bottom"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:paddingLeft="@dimen/standardPadding"
	                android:text="@string/miliseconds"
	                android:textAppearance="?android:attr/textAppearanceSmall"/>
	
	        </LinearLayout>
	        
	  	  <LinearLayout
	  	    android:id="@+id/jitterResults"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:id="@+id/jitterIcon"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/jitter_big" />
	
	            <TextView
	                android:id="@+id/jitterLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="@string/jitterLabel"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="#000000"
	                android:textSize="@dimen/resultsLabelSize" />

	            <TextView
	                android:id="@+id/jitterSpeed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.26"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="0"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="#000000"
	                android:textSize="@dimen/numResultsSize"/>
	
	            <TextView
	                android:id="@+id/jitterUnits"
	                android:layout_width="50sp"
	                android:textColor="#000000"
	                android:layout_height="wrap_content"
	                android:layout_gravity="bottom"
	                android:gravity="left"
	                android:paddingBottom="@dimen/adjustmentPadding"
	                android:paddingLeft="@dimen/standardPadding"
	                android:text="@string/miliseconds"
	                android:textAppearance="?android:attr/textAppearanceSmall"/>
	
	        </LinearLayout>
	        
	  	  <LinearLayout
	  	    android:id="@+id/networkId"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="@dimen/resultsHeight"
	  	    android:gravity="center"
	  	    android:orientation="horizontal"
	  	    android:paddingTop="@dimen/standardPadding" >
	
	            <ImageView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:adjustViewBounds="true"
	                android:paddingLeft="@dimen/standardPadding"
	                android:src="@drawable/network" />
	
	            <TextView
	                android:id="@+id/networkLabel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:paddingLeft="@dimen/standardPadding"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="Cellular Carrier"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                android:textColor="#000000"
	                android:textSize="@dimen/resultsLabelSize" />

	            <TextView
	                android:id="@+id/networkValue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.26"
	                android:gravity="right"
	                android:paddingTop="@dimen/adjustmentPadding"
	                android:text="searching"
	                android:layout_marginRight="20sp"
	                android:textAppearance="?android:attr/textAppearanceSmall"
	                android:textColor="#000000"/>
	            
	
	        </LinearLayout>
	  	  
	  	  <ProgressBar
	  	      android:id="@+id/loadingIcon"
	  	      android:layout_width="wrap_content"
	  	      android:layout_height="wrap_content"
	  	      android:layout_gravity="center"
	  	      android:visibility="invisible" />

	  </LinearLayout>    
	 <LinearLayout
         android:id="@+id/bottomFrame"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_gravity="bottom"
	     android:orientation="vertical"
	     android:paddingBottom="@dimen/standardPadding"  >
        
	          

	    <Button
	        android:id="@+id/ButtonStandardTest"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_margin="@dimen/standardPadding"
	        android:background="@drawable/bluebutton"
	        android:text="@string/standardTest"
	        android:textSize="50sp" />

	 </LinearLayout>
	 
     <TextView 
	   	    android:layout_width="fill_parent" 
	   	    android:layout_height="fill_parent"
	    	android:id="@+id/TextViewMain" 
	    	android:text=""
	    	android:gravity="bottom" 
	    	android:scrollbars="vertical" 
	    	android:textColor="#000000"
	    	android:visibility="gone" 
	    	android:paddingTop="@dimen/standardPadding"
	    	android:paddingBottom="@dimen/standardPadding"/>

</LinearLayout>